# reversi

cahier_des_besoins/: cahier_des_besoins.tex  cahier_des_charges.tex  reversi.bib
code/: CMakeLists.txt  README.md  main.cc  tests_main.cc
code/c++/: CMakeLists.txt  README.md  main.cc  main_test.cc  test_main.cc
code/c++/include/: application.hh  board.hh  player.hh  random_ia.hh  user.hh
code/c++/include_tests/: test_board.hh
code/c++/src/: application.cc  board.cc  player.cc  random_ia.cc  user.cc
code/c++/tests/: test_board.cc
code/include/: board.hh
code/src/: board.cc  random_ia.cc  user.cc
code/tests/: test_board.cc  test_board.hh
